...

    <string name="action_back">Back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">OK</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_forever">Delete forever</string>
    <string name="action_confirm_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_saving">Saving</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_more">More actions</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_unfavorite">Remove favorite</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_restore">Restore</string>
    <string name="action_configure">Configure</string>
    <string name="action_collapse">Collapse</string>
    <string name="action_new">New</string>

    <string name="nav_records">Records</string>
    <string name="nav_calendar">Calendar</string>
...
